# TweeRS

./: .gitignore  Cargo.toml  LICENSE  README.md  WASM_BUILD.md  build-wasm.bat  build-wasm.sh
.changes/: config.toml  dead-code.md  excel.md  file-collect.md  file-sorting.md  fix-harlowe-parser.md  fix_build_and_lint.md  fix_file_ordering.md  fmt-clippy.md  harlowe-support.md  hook-scripts.md  html2twee.md  refactor_components.md  start-passage.md  story-format.md  story_data_parsing.md  tag.md  tweers-paths.md  update-command.md  wasm-types.md  wasm.md  workflow_paths.md  workflows.md
.github/ISSUE_TEMPLATE/: bug_issue_zh.yml
.github/workflows/: build.yml  gh-pages.yml  semifold-ci.yaml  semifold-status.yaml  test.yml  w-build-linux-aarch64.yaml  w-build.yaml
crates/asset/: CHANGELOG.md  Cargo.toml
crates/asset/src/: lib.rs  nodes.rs  register.rs
crates/cli/: CHANGELOG.md  Cargo.toml
crates/cli/src/: cli.rs  logging.rs  main.rs  update.rs
crates/cli/tests/: html2twee.rs
crates/core/: CHANGELOG.md  Cargo.toml
crates/core-full/: CHANGELOG.md  Cargo.toml
crates/core-full/src/: api.rs  commands.rs  format.rs  lib.rs  watch.rs
crates/core-full/src/context/: cache.rs  config.rs  format.rs  mod.rs
crates/core-full/src/io/: collector.rs  filters.rs  mod.rs
crates/core-full/src/pipeline/: mod.rs  register.rs
crates/core-full/src/pipeline/nodes/: basic.rs  mod.rs
crates/core-full/src/pipeline/parsers/: excel.rs  media.rs  mod.rs  registry.rs  text.rs  trait.rs  twee.rs
crates/core-full/tests/: collector.rs  integration.rs  parser.rs
crates/core/src/: api.rs  commands.rs  lib.rs
crates/core/src/config/: constants.rs
crates/core/src/context/: mod.rs  traits.rs
crates/core/src/core/: file.rs  html.rs  mod.rs  output.rs  parser.rs  skip.rs  story.rs
crates/core/src/error/: excel.rs  mod.rs  tweers.rs
crates/core/src/excel/: arrays.rs  header.rs  mod.rs  parser.rs  templates.rs  types.rs
crates/core/src/js/: manager.rs
crates/core/src/pipeline/: builder.rs  core.rs  keys.rs  mod.rs  registry.rs
crates/core/src/util/: file.rs  html.rs  mod.rs  sort.rs
crates/core/src/wasm/: api.rs  mod.rs  tweers_core.d.ts  types.rs
crates/core/tests/: builder.rs  error.rs  html_generation.rs  registry.rs  sort.rs  typed_key.rs
crates/js/: CHANGELOG.md  Cargo.toml
crates/js/src/: engine.rs  error.rs  lib.rs  manager.rs  nodes.rs  register.rs
docs/: .gitignore  package.json  pnpm-lock.yaml  rspress.config.ts  tsconfig.json
docs/docs/: _meta.json  index.md
docs/docs/guide/: _meta.json  concepts.mdx  excel.md  index.md  index.mdx  installation.mdx  quick-start.md  quick-start.mdx  scripts.md  scripts.mdx  vscode.mdx
docs/docs/guide/extensions/: _meta.json  excel.mdx
docs/docs/guide/harlowe/: index.mdx
docs/docs/guide/sugarcube/: _meta.json  arrays.mdx  click-refresh.mdx  conditional.mdx  crafting.mdx  index.mdx  links.mdx  loops.mdx  macros.mdx  markup.mdx  object-arrays.mdx  objects.mdx  passages.mdx  story-init.mdx  variables.mdx  widgets.mdx
docs/docs/public/story-format/harlowe-4-unstable/: format.js
docs/docs/public/vscode/: tweers-dev-tool-0.0.13.vsix
docs/src/: env.d.ts
docs/src/components/: FileLink.tsx  ScrollArea.tsx  TemplateDownload.tsx  TextareaWithScrollbar.tsx  TweePlayground.tsx  index.ts
docs/src/teaching/: ArrayVisualizer.tsx  AssignmentVisualizer.tsx  ConditionVisualizer.tsx  ExcelVisualizer.tsx  LoopVisualizer.tsx  ObjectArrayVisualizer.tsx  ObjectVisualizer.tsx  PassageVisualizer.tsx  WidgetVisualizer.tsx  index.ts
docs/tweers-core/: package.json  tweers_core.d.ts  tweers_core.js  tweers_core_bg.js  tweers_core_bg.wasm  tweers_core_bg.wasm.d.ts
installer/: tweers.iss
scripts/: Scripts.md
scripts/data/sugarcube/: i18.js  var_color.js
scripts/html/sugarcube/: save-slots.js
scripts/tool/: get-value.js
src/: cli.rs  lib.rs  logging.rs  main.rs
src/config/: constants.rs
src/core/: mod.rs  output.rs  parser.rs  story.rs
src/error/: js.rs  mod.rs  pipeline.rs
src/excel/: arrays.rs  header.rs  mod.rs  parser.rs  templates.rs  types.rs
src/js/: engine.rs  error.rs  manager.rs  mod.rs
src/pipeline/: core.rs  error.rs  mod.rs  nodes.rs
src/pipeline/nodes/: asset.rs  basic.rs  mod.rs  script.rs
src/util/: file.rs
test/: wasm-example.html
test/excel/: example.xlsx
test/story/: A.twee
test/story/Part 1/: A.twee
test/story/Part 2/: A.twee
