[package]
name = "tweers"
version = "0.1.3"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1"
tokio = { version = "1.45.1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.0"
notify = "8.0.0"
indexmap = { version = "2.9.0", features = ["serde"] }