[package]
name = "tweers-cli"
version = "1.0.0"
edition = "2024"
publish = false

[[bin]]
name = "tweers"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tweers-core = { path = "../core", version = "1.0.0" }
tweers-core-full = { path = "../core-full", version = "1.0.0" }
tweers-js = { path = "../js", version = "1.0.0" }
tweers-asset = { path = "../asset", version = "1.0.0" }
zip = "4.3.0"

[target.'cfg(unix)'.dependencies]
tar = "0.4"
flate2 = "1.0"
