[package]
name = "tweers-core-full"
version = "1.0.3"
edition = "2021"
description = "TweeRS core with I/O operations for desktop/Tauri applications"
license = "MIT"
publish = false

[dependencies]
tweers-core = { path = "../core", version = "1.0.3" }
tokio = { version = "1.45.1", features = ["full"] }
notify = "8.0.0"
reqwest = { version = "0.12", features = ["blocking"] }
async-trait = "0.1.88"
tracing = "0.1"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
indexmap = "2.9.0"
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
