[package]
name = "tweers-core"
version = "0.1.20"
edition = "2024"
publish = false

[dependencies]
async-trait = "0.1.88"
calamine = "0.30.0"
indexmap = { version = "2.9.0", features = ["serde"] }
regex = "1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
