[package]
name = "tweers-js"
version = "1.0.0"
edition = "2024"
publish = false

[dependencies]
async-trait = "0.1.88"
indexmap = { version = "2.9.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1"
tweers-core = { path = "../core", version = "1.0.0" }
tweers-core-full = { path = "../core-full", version = "1.0.0" }
v8 = "137.2.0"
